bootstrap/apps/secrets/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: education
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.tlu.my
      http:
        paths:
          - backend:
              service:
                name: grafana
                port:
                  number: 3001
            pathType: ImplementationSpecific
