bootstrap/apps/secrets/jaeger-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-ingress
  namespace: education
spec:
  ingressClassName: nginx
  rules:
    - host: jaeger.tlu.my
      http:
        paths:
          - backend:
              service:
                name: jaeger
                port:
                  number: 16686
            pathType: ImplementationSpecific
